--- a/detail.html
+++ b/detail.html
@@ -20,6 +20,9 @@
                 <div class="header-title">
                     <h1>메뉴 상세</h1>
                 </div>
+                <div class="header-right">
+                    <span style="color: white;">★</span>
+                </div>
             </div>
 
             <!-- 메뉴 상세 컨텐츠 -->
@@ -29,8 +32,12 @@
                 </div>
 
                 <div class="detail-info">
-                    <h2 id="menu-name">메뉴명</h2>
-                    <p id="menu-name-eng">Menu Name</p>
+                    <div class="menu-title-container">
+                        <div>
+                            <h2 id="menu-name">메뉴명</h2>
+                            <p id="menu-name-eng">Menu Name</p>
+                        </div>
+                    </div>
                     <p id="menu-corner">코너 정보</p>
                     <div class="price-container">
                         <p id="menu-price" class="price">0,000원</p>
