--- a/detail.html
+++ b/detail.html
@@ -83,6 +83,22 @@
                     </div>
                 </div>
 
+                <!-- 합계 금액 표시 영역 -->
+                <div class="price-summary">
+                    <div class="price-row">
+                        <span>기본 가격</span>
+                        <span id="base-price">0원</span>
+                    </div>
+                    <div class="price-row" id="options-price-row">
+                        <span>옵션 추가</span>
+                        <span id="options-price">0원</span>
+                    </div>
+                    <div class="price-row total">
+                        <span>합계</span>
+                        <span id="total-price">0원</span>
+                    </div>
+                </div>
+
                 <!-- 장바구니 버튼 -->
                 <div class="cart-button-container">
                     <button id="add-to-cart-btn" class="add-to-cart-btn">장바구니 담기</button>
