--- a/order-history.html
+++ b/order-history.html
@@ -12,12 +12,14 @@
     <div class="app-container">
         <div class="header">
             <div class="header-left">
-                <button id="back-btn" class="back-btn"><i class="fas fa-arrow-left"></i></button>
+                <button id="back-btn" class="back-btn"><i class="fas fa-chevron-left"></i></button>
             </div>
-        </div>
-
-        <div class="header-title">
-            <h1>주문내역</h1>
+            <div class="header-title">
+                <h1>주문내역</h1>
+            </div>
+            <div class="header-right">
+                <span style="color: white;"><i class="fas fa-ellipsis-v"></i></span>
+            </div>
         </div>
 
         <div class="tab-container">
