--- a/cart.html
+++ b/cart.html
@@ -14,12 +14,16 @@
         <div id="cart-page" class="page active-page">
             <!-- 헤더 섹션 -->
             <header class="header">
-                <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i></a>
+                <div class="header-left">
+                    <button id="back-btn" class="back-btn"><i class="fas fa-chevron-left"></i></button>
+                </div>
+                <div class="header-title">
+                    <h1>장바구니</h1>
+                </div>
+                <div class="header-right">
+                    <span style="color: white;"><i class="fas fa-ellipsis-v"></i></span>
+                </div>
             </header>
-
-            <div class="header-title">
-                <h1>장바구니</h1>
-            </div>
 
             <!-- 장바구니 내용 -->
             <main class="cart-content">
