--- a/order-detail.html
+++ b/order-detail.html
@@ -44,17 +44,22 @@
         <div class="order-info-section">
             <div class="order-info-header">
                 <div class="order-time-container">
-                    <i class="fas fa-clock"></i>
-                    <span id="order-time">2025-06-05 12:45</span>
+                    <i class="fas fa-utensils"></i>
+                    <div class="order-info">
+                        <span class="tlrekdname">후생관</span>
+                        <span id="order-time">2025-06-05 12:45</span>
+                    </div>
                 </div>
             </div>
             
             <div class="order-items">
                 <p class="section-title">주문내역</p>
-
                 <div class="menu-detail">
                     <div class="menu-info">
                         <h3 id="menu-name">김치우동 (매콤하게)</h3>
+                        <p id="menu-eng-name" class="menu-eng-name"></p>
+                    </div>
+                    <div class="menu-info2">
                         <p class="menu-price">4,000원</p>
                     </div>
                 </div>
