--- a/detail.html
+++ b/detail.html
@@ -32,7 +32,7 @@
                             <p id="menu-name-eng">Menu Name</p>
                         </div>
                     </div>
-                    <p id="menu-corner">코너 정보</p>
+                    <!-- <p id="menu-corner">코너 정보</p> -->
                     <div class="price-container">
                         <p id="menu-price" class="price">0,000원</p>
                     </div>
@@ -57,7 +57,7 @@
                             <div id="menu-allergies" class="allergy-list">
                                 알레르기 정보가 없습니다.
                             </div>
-                            <div class="allergy-icons">
+                            <!-- <div class="allergy-icons">
                                 <div class="allergy-icon-item">
                                     <span>🥚</span> 계란 Egg
                                 </div>
@@ -67,7 +67,7 @@
                                 <div class="allergy-icon-item">
                                     <span>🥛</span> 우유 Milk
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="modal-footer">
                             <button class="confirm-btn">확인</button>
