--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="header-icons">
                     <a href="#" class="icon-btn" id="search-btn"><i class="fas fa-search"></i></a>
                     <a href="#" class="icon-btn" id="cart-btn"><i class="fas fa-shopping-cart"></i></a>
-                    <a href="#" class="icon-btn" id="order-history-btn"><i class="fas fa-list"></i></a>
+                    <a href="#" class="icon-btn" id="order-history-btn"><i class="fas fa-receipt"></i></a>
                     <a href="#" class="icon-btn" id="weekly-menu-btn"><i class="far fa-calendar-alt"></i></a>
                 </div>
             </header>
@@ -27,7 +27,7 @@
 
             <!-- 즐겨찾기 섹션 -->
             <section class="favorites-section">
-                <h2>즐겨찾기</h2>
+                <h2><i class="fas fa-star"></i> 즐겨찾기</h2>
                 <div class="favorites-container">
                     <!-- 즐겨찾기 메뉴 항목들이 여기에 동적으로 추가됨 -->
                 </div>
