--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </header>
 
             <div class="header-title">
-                <h1>5.24 후생관 메뉴 정보</h1>
+                <h1>후생관 메뉴 정보</h1>
             </div>
 
             <!-- 즐겨찾기 섹션 -->
