--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- 메인 페이지 시작 -->
         <div id="main-page" class="page active-page">
             <!-- 헤더 영역 -->
-            <header class="header">
+            <header class="header" style="padding-top: 0;">
                 <div class="header-icons">
                     <a href="#" class="icon-btn" id="search-btn"><i class="fas fa-search"></i></a>
                     <a href="#" class="icon-btn" id="cart-btn"><i class="fas fa-shopping-cart"></i></a>
@@ -21,7 +21,7 @@
                 </div>
             </header>
 
-            <div class="header-title">
+            <div class="header-title" style="margin-bottom: 15px;">
                 <h1>후생관 메뉴 정보</h1>
             </div>
 
