--- a/weekly-menu.html
+++ b/weekly-menu.html
@@ -15,6 +15,9 @@
                 <i class="fas fa-chevron-left"></i>
             </button>
             <h1>주간 메뉴</h1>
+            <div class="header-right">
+                <span style="color: white;"><i class="fas fa-ellipsis-v"></i></span>
+            </div>
         </header>
 
         <div class="weekly-menu-container">
